Scaffold data grid - added possibility to 'fix' row actions column during horizontal scroll; multi-row seletion column now fixed during horizontal scroll; several fixes and improvements in datagrid.php view

--- a/src/PeskyCMF/public/less/cmf.app.less
+++ b/src/PeskyCMF/public/less/cmf.app.less
@@ -364,7 +364,8 @@ div.dataTables_wrapper {
     }
 
     &.multiselect {
-        .dataTables_scrollHead {
+        .dataTables_scrollHead,
+        .DTFC_LeftWrapper .DTFC_LeftHeadWrapper {
             .dropdown-menu {
                 position: fixed;
                 top: auto;
@@ -379,14 +380,26 @@ div.dataTables_wrapper {
                 margin: 0;
                 line-height: normal;
                 background-color: transparent;
-                opacity: 0.3;
+                opacity: 0.5;
                 color: #000000;
                 outline: 0 none;
 
                 &:hover {
-                    opacity: 0.5;
+                    opacity: 1;
+                }
+
+                > span {
+                    font-size: 16px;
+                    vertical-align: middle;
+                    line-height: 24px;
                 }
             }
+        }
+    }
+
+    .DTFC_LeftWrapper {
+        .DTFC_LeftHeadWrapper {
+            overflow: visible !important;
         }
     }
 
